# supersociedades-scraper

./: .env.example  .gitignore  MEMORY.md  README.md  check.ts  next.config.ts  page_dump.html  pyproject.toml  requirements.txt  run_full.py  taxonomia_conceptos_supersociedades_v1.0.md  testCopilot.ts  vercel.json
.claude/: launch.json  settings.local.json
app/: CLAUDE_MEMORY.md  package-lock.json  package.json
app/prisma/: schema.prisma
app/script_output/: extracted_cases_ai.json  scraped_cases_links.json
app/scripts/: batchUploader.cjs  build-entity-resolution.cjs  canonicalize_action_types.cjs  check-db.js  check-embeddings.cjs  check-types.js  cohens-kappa-test.cjs  data-quality-audit.cjs  diagnose-authority.js  enrich-citations-qa.cjs  extract_cases.js  generate-embeddings-laudos.cjs  generate50cases.js  inspect-laudos.cjs  inspect-pending-conceptos.cjs  list_models.js  migrate_action_types.sql  migrate_to_postgres.js  resolve-citations.cjs  run-fase3.ts  (+4 more)
data/: taxonomia_sentencias_supersociedades_v1.0.md
scraper/: requirements-dev.txt  run_full.py
script_output/: scraped_200_cases.json
scripts/: check-conceptos.cjs  check-links.ts  check-missing-pdfs.cjs  check-pending-conceptos.cjs  check-taxonomy-coverage.cjs  classify_all.py  classify_themes.py  cleanup-empty-conceptos.cjs  dump.ts  enrich-conceptos.cjs  enrich-denial-reasons.cjs  generate-embeddings-conceptos.cjs  generate_subtemas.py  orchestrator.ts  parse_dom.js  reclassify-manual-cases.cjs  sample_and_extract.py  sanitize-source-references.ts  scrape.ts
src/: cli.py  config.py  dedupe.py  http_client.py  models.py  parsers.py  storage.py  utils.py
tests/: test_downloader.py  test_parsers.py  test_storage.py  test_urls.py
(+113 files in other folders)
